objects/Country_and_State__mdt.object
<CustomObject>
    <description>SAFBIO-1632</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Country and State</label>
    <pluralLabel>Countries and States</pluralLabel>
</CustomObject>